--- a/server/src/templates/auth/register.html
+++ b/server/src/templates/auth/register.html
@@ -65,46 +65,33 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h2 class="u-text u-text-default u-text-1" data-lang-en="​Pet &amp;amp; Animal Care Courses">Registration</h2>
         <div class="u-form u-form-1">
-          <form class="u-clearfix u-form-spacing-10 u-form-vertical u-inner-form" style="padding: 10px;" method="post">
-            <div class="u-form-group u-form-name">
-              <label for="username" class="u-label">Username</label>
-              <input type="text" placeholder="Enter your username" id="username" name="username" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="required">
-            </div>
-            <div class="u-form-group">
-              <label for="firstname" class="u-label">First name</label>
-              <input type="text" placeholder="Enter your first name" id="firstname" name="firstname" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="required">
-            </div>
-            <div class="u-form-group u-form-group-3">
-              <label for="lastname" class="u-label">Last name</label>
-              <input type="text" placeholder="Enter your last name" id="lastname" name="lastname" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="required">
-            </div>
-            <div class="u-form-checkbox-group u-form-group u-form-group-4">
-              <label class="u-label">Do you have refugee status?</label>
-              <div class="u-form-checkbox-group-wrapper">
-                <div class="u-input-row">
-                  <input id="field-4d7b" type="checkbox" value="yes" name="is_refugee">
-                  <label class="u-label" for="field-4d7b">Yes</label>
-                </div>
-                <div class="u-input-row">
-                  <input id="field-7735" type="checkbox" value="no" name="is_refugee">
-                  <label class="u-label" for="field-7735">No</label>
-                </div>
+          
+          <form method="post">
+            <label for="username" class="u-label">Username</label>
+            <input name="username" id="username" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required>
+        
+            <label for="firstname" class="u-label">First name</label>
+            <input name="firstname" id="firstname" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required>
+        
+            <label for="lastname" class="u-label">Last name</label>
+            <input name="lastname" id="lastname" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required>
+        
+            <label for="is_refugee" class="u-label">Do you have refugee status?</label>
+            <div class="u-form-checkbox-group-wrapper">
+              <div class="u-input-row">
+              <input type="checkbox" name="is_refugee" id="option1" value="yes"> Yes </input><br>
+              </div>
+              <div class="u-input-row">
+              <input type="checkbox" name="is_refugee" id="option2" value="no"> No </input><br>
               </div>
             </div>
-            <div class="u-form-group u-form-group-5">
-              <label for="text-faf8" class="u-label">Password</label>
-              <input type="password" placeholder="Enter a password" id="password" name="password" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required="required">
-            </div>
-            <div class="u-form-group u-form-group-6">
-              <label for="text-acd7" class="u-label">Refugee ID</label>
-              <input type="text" placeholder="Enter your refugee ID (if it applies)" id="text-acd7" name="ref-idee" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white">
-            </div>
-            <div class="u-align-left u-form-group u-form-submit">
-              <a class="u-btn u-btn-submit u-button-style">submit</a>
-              <input type="submit" value="submit" class="u-form-control-hidden">
-            </div>
-            <input type="hidden" value="" name="recaptchaResponse">
-            <input type="hidden" name="formServices" value="e8dedf433b2f9e8469cbbd3b973f0790">
+            
+            
+        
+            <label for="password" class="u-label">Password</label>
+            <input type="password" name="password" id="password" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required>
+        
+            <input type="submit" value="Register">
           </form>
         </div>
       </div>
