--- a/server/src/templates/refugee_courses/refugee_courses.html
+++ b/server/src/templates/refugee_courses/refugee_courses.html
@@ -19,7 +19,7 @@
 		"@context": "http://schema.org",
 		"@type": "Organization",
 		"name": "",
-		"logo": "images/IntegrApp1.png"
+		"logo": "/static/images/IntegrApp1.png"
 }</script>
     <meta name="theme-color" content="#476160">
     <meta property="og:title" content="Courses (join)">
@@ -27,7 +27,7 @@
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-a7b1"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="/" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
-          <img src="images/IntegrApp1.png" class="u-logo-image u-logo-image-1">
+          <img src="/static/images/IntegrApp1.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;" wfd-invisible="true">
@@ -65,7 +65,7 @@
             <div class="u-align-left u-blog-post u-container-style u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-repeater-item-1">
               <div class="u-container-layout u-similar-container u-valign-top-sm u-container-layout-1">
                 <a class="u-post-header-link" href="blog/post-5.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width-xs u-image u-image-default u-image-1" src="images/54e25d53051dc23e098e652dc37928d093dbaeb12fa2ef8b69f26c1eeccf33b7c41d086a8ab6f22099f486100e480ce6fdf99305f8546dc341cf25_1280.jpg" data-image-width="150" data-image-height="100" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width-xs u-image u-image-default u-image-1" src="/static/images/54e25d53051dc23e098e652dc37928d093dbaeb12fa2ef8b69f26c1eeccf33b7c41d086a8ab6f22099f486100e480ce6fdf99305f8546dc341cf25_1280.jpg" data-image-width="150" data-image-height="100" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
                 </a>
                 <h4 class="u-text u-text-black u-text-default-xs u-text-2">C++ for beginners</h4>
                 <p class="u-text u-text-default-xs u-text-3">2 Dec | 15 registered participants</p>
@@ -78,7 +78,7 @@
             <div class="u-align-left u-blog-post u-container-style u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-repeater-item-2">
               <div class="u-container-layout u-similar-container u-valign-top-sm u-container-layout-2">
                 <a class="u-post-header-link" href="blog/post-4.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width-xs u-image u-image-default u-image-2" src="images/e4663a4d15e010e4fd05e350ec0a6fcf5cccffd8d5dd9869e13132f2a31eb3fbddc5d1add98eed41b5c23a3abc6e241371a24bf79eba32efbbeabb_1280.jpg" data-image-width="1280" data-image-height="915" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width-xs u-image u-image-default u-image-2" src="/static/images/e4663a4d15e010e4fd05e350ec0a6fcf5cccffd8d5dd9869e13132f2a31eb3fbddc5d1add98eed41b5c23a3abc6e241371a24bf79eba32efbbeabb_1280.jpg" data-image-width="1280" data-image-height="915" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
                 </a>
                 <h4 class="u-text u-text-black u-text-default-xs u-text-5">German (beginners)</h4>
                 <p class="u-text u-text-default-xs u-text-6">2 Dec | 22 registered participants</p>
@@ -89,7 +89,7 @@
             <div class="u-align-left u-blog-post u-container-style u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-repeater-item-3">
               <div class="u-container-layout u-similar-container u-valign-top-sm u-container-layout-3">
                 <a class="u-post-header-link" href="blog/post-3.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width-xs u-image u-image-default u-image-3" src="images/1901f2e63b8d40f8e02bc2235dbb919484b92d517cf7f8bfefd80f0ba2b50139354b90878c82666182c51b7c9b80deb1590d89f92d4f1a65582e4b_1280.jpg" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500" data-image-width="1280" data-image-height="857"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width-xs u-image u-image-default u-image-3" src="/static/images/1901f2e63b8d40f8e02bc2235dbb919484b92d517cf7f8bfefd80f0ba2b50139354b90878c82666182c51b7c9b80deb1590d89f92d4f1a65582e4b_1280.jpg" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500" data-image-width="1280" data-image-height="857"><!--/blog_post_image-->
                 </a>
                 <h4 class="u-text u-text-black u-text-default-xs u-text-8">baking course</h4>
                 <p class="u-text u-text-default-xs u-text-9">4 Dec | 10 registered participants</p>
@@ -109,19 +109,19 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/3144456.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="/static/images/3144456.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="images/991922.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="/static/images/991922.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-3">
-                <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="images/839888.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="/static/images/839888.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-4">
-                <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="images/2704794.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="/static/images/2704794.png" alt=""></span>
                 </div>
               </div>
             </div>
