--- a/server/src/templates/refugee_events/refugee_events.html
+++ b/server/src/templates/refugee_events/refugee_events.html
@@ -27,7 +27,7 @@
   </head>
   <body class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-a7b1"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="/" class="u-image u-logo u-image-1" data-image-width="500" data-image-height="500">
-          <img src="images/IntegrApp1.png" class="u-logo-image u-logo-image-1">
+          <img src="/static/images/IntegrApp1.png" class="u-logo-image u-logo-image-1">
         </a>
         <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1" data-responsive-from="XL">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;" wfd-invisible="true">
@@ -65,7 +65,7 @@
             <div class="u-align-left u-blog-post u-container-style u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-repeater-item-1">
               <div class="u-container-layout u-similar-container u-valign-top-sm u-container-layout-1">
                 <a class="u-post-header-link" href="blog/post-5.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1" src="images/afff36dd526c7b88dc75a5d80b929e95903519b4fc14f4d393090cf629e202be257f6f345fcb4bc48beb7dc93d6062f4b4f35f66260ac65bb243ab_1280.jpg" data-image-width="1280" data-image-height="854" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-1" src="/static/images/afff36dd526c7b88dc75a5d80b929e95903519b4fc14f4d393090cf629e202be257f6f345fcb4bc48beb7dc93d6062f4b4f35f66260ac65bb243ab_1280.jpg" data-image-width="1280" data-image-height="854" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
                 </a>
                 <h4 class="u-text u-text-black u-text-default-xs u-text-2">pizza party</h4>
                 <p class="u-text u-text-default-xs u-text-3">3 Dec | 20 attending</p>
@@ -78,7 +78,7 @@
             <div class="u-align-left u-blog-post u-container-style u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-repeater-item-2">
               <div class="u-container-layout u-similar-container u-valign-top-sm u-container-layout-2">
                 <a class="u-post-header-link" href="blog/post-4.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="images/e458ca2c80c907942be36bac154e22e63743c635a1c7de5df720e5d3a72d088cb129f682cdf56552b30516a9799d98d5ea179667316382f3727fa9_1280.jpg" data-image-width="1280" data-image-height="853" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-2" src="/static/images/e458ca2c80c907942be36bac154e22e63743c635a1c7de5df720e5d3a72d088cb129f682cdf56552b30516a9799d98d5ea179667316382f3727fa9_1280.jpg" data-image-width="1280" data-image-height="853" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500"><!--/blog_post_image-->
                 </a>
                 <h4 class="u-text u-text-black u-text-default-xs u-text-5">füssen tour</h4>
                 <p class="u-text u-text-default-xs u-text-6">4 Dec | 12 attending</p>
@@ -89,7 +89,7 @@
             <div class="u-align-left u-blog-post u-container-style u-radius-15 u-repeater-item u-shape-round u-video-cover u-white u-repeater-item-3">
               <div class="u-container-layout u-similar-container u-valign-top-sm u-container-layout-3">
                 <a class="u-post-header-link" href="blog/post-3.html"><!--blog_post_image-->
-                  <img alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-3" src="images/gff253ea208056c64082f4196b503ecc8c52eaecd02854b5656056fe6e8d8723976a38bdc6cd0a2e64add13023cf27bb8_1280.jpg" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500" data-image-width="1280" data-image-height="721"><!--/blog_post_image-->
+                  <img alt="" class="u-blog-control u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-3" src="/static/images/gff253ea208056c64082f4196b503ecc8c52eaecd02854b5656056fe6e8d8723976a38bdc6cd0a2e64add13023cf27bb8_1280.jpg" data-animation-name="customAnimationIn" data-animation-duration="1750" data-animation-delay="500" data-image-width="1280" data-image-height="721"><!--/blog_post_image-->
                 </a>
                 <h4 class="u-text u-text-black u-text-default-xs u-text-8">munich tour</h4>
                 <p class="u-text u-text-default-xs u-text-9">8 Dec | 27 registered participants</p>
@@ -109,19 +109,19 @@
           <div class="u-layout">
             <div class="u-layout-row">
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-1">
-                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="images/3144456.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-1"><span class="u-file-icon u-icon u-icon-1"><img src="/static/images/3144456.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-2">
-                <div class="u-container-layout u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="images/991922.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-2"><span class="u-file-icon u-icon u-icon-2"><img src="/static/images/991922.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-3">
-                <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="images/839888.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-3"><span class="u-file-icon u-icon u-icon-3"><img src="/static/images/839888.png" alt=""></span>
                 </div>
               </div>
               <div class="u-container-style u-layout-cell u-size-15-lg u-size-15-sm u-size-15-xl u-size-15-xs u-size-30-md u-layout-cell-4">
-                <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="images/2704794.png" alt=""></span>
+                <div class="u-container-layout u-container-layout-4"><span class="u-file-icon u-icon u-icon-4"><img src="/static/images/2704794.png" alt=""></span>
                 </div>
               </div>
             </div>
