--- a/server/src/templates/local_items/local_items.html
+++ b/server/src/templates/local_items/local_items.html
@@ -80,19 +80,19 @@ Dentistry">
 		c-1.237-1.237-1.918-2.885-1.918-4.639S7.775,9.22,9.013,7.983C9.403,7.593,9.403,6.96,9.013,6.569z"></path>
 </g></svg></span>
                 <h4 class="u-text u-text-black u-text-3">phone</h4>
-                <a href="https://nicepage.com/c/gallery-website-templates" class="u-border-active-palette-1-light-1 u-border-hover-palette-1-light-1 u-border-none u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-custom-color-2 u-radius-0 u-text-active-palette-1-light-3 u-text-body-alt-color u-text-hover-palette-1-light-3 u-top-left-radius-0 u-top-right-radius-0 u-btn-1">donate</a>
+                <a href="#" class="u-border-active-palette-1-light-1 u-border-hover-palette-1-light-1 u-border-none u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-custom-color-2 u-radius-0 u-text-active-palette-1-light-3 u-text-body-alt-color u-text-hover-palette-1-light-3 u-top-left-radius-0 u-top-right-radius-0 u-btn-1">donate</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-custom-color-3 u-list-item u-radius-10 u-repeater-item u-shape-round u-video-cover u-list-item-2">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2"><span class="u-file-icon u-icon u-text-black u-icon-2"><img src="/static/images/2702134-1cb9c118.png" alt=""></span>
                 <h4 class="u-text u-text-black u-text-4">school kits</h4>
-                <a href="https://nicepage.site" class="u-border-active-palette-1-light-1 u-border-hover-palette-1-light-1 u-border-none u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-custom-color-2 u-radius-0 u-text-active-palette-1-light-3 u-text-body-alt-color u-text-hover-palette-1-light-3 u-top-left-radius-0 u-top-right-radius-0 u-btn-2">donate</a>
+                <a href="# class="u-border-active-palette-1-light-1 u-border-hover-palette-1-light-1 u-border-none u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-custom-color-2 u-radius-0 u-text-active-palette-1-light-3 u-text-body-alt-color u-text-hover-palette-1-light-3 u-top-left-radius-0 u-top-right-radius-0 u-btn-2">donate</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-custom-color-3 u-list-item u-radius-10 u-repeater-item u-shape-round u-video-cover u-list-item-3">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3"><span class="u-file-icon u-icon u-text-black u-icon-3"><img src="/static/images/500225-7462738f.png" alt=""></span>
                 <h4 class="u-text u-text-black u-text-5">shoes</h4>
-                <a href="https://nicepage.com/c/sale-website-templates" class="u-border-active-palette-1-light-1 u-border-hover-palette-1-light-1 u-border-none u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-custom-color-2 u-radius-0 u-text-active-palette-1-light-3 u-text-body-alt-color u-text-hover-palette-1-light-3 u-top-left-radius-0 u-top-right-radius-0 u-btn-3">donate</a>
+                <a href="#" class="u-border-active-palette-1-light-1 u-border-hover-palette-1-light-1 u-border-none u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-custom-color-2 u-radius-0 u-text-active-palette-1-light-3 u-text-body-alt-color u-text-hover-palette-1-light-3 u-top-left-radius-0 u-top-right-radius-0 u-btn-3">donate</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-custom-color-3 u-list-item u-radius-10 u-repeater-item u-shape-round u-video-cover u-list-item-4">
