--- a/server/src/templates/local_items/local_items.html
+++ b/server/src/templates/local_items/local_items.html
@@ -86,7 +86,7 @@ Dentistry">
             <div class="u-align-center u-container-style u-custom-color-3 u-list-item u-radius-10 u-repeater-item u-shape-round u-video-cover u-list-item-2">
               <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2"><span class="u-file-icon u-icon u-text-black u-icon-2"><img src="/static/images/2702134-1cb9c118.png" alt=""></span>
                 <h4 class="u-text u-text-black u-text-4">school kits</h4>
-                <a href="# class="u-border-active-palette-1-light-1 u-border-hover-palette-1-light-1 u-border-none u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-custom-color-2 u-radius-0 u-text-active-palette-1-light-3 u-text-body-alt-color u-text-hover-palette-1-light-3 u-top-left-radius-0 u-top-right-radius-0 u-btn-2">donate</a>
+                <a href="#" class="u-border-active-palette-1-light-1 u-border-hover-palette-1-light-1 u-border-none u-border-white u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-button-style u-custom-color-2 u-radius-0 u-text-active-palette-1-light-3 u-text-body-alt-color u-text-hover-palette-1-light-3 u-top-left-radius-0 u-top-right-radius-0 u-btn-2">donate</a>
               </div>
             </div>
             <div class="u-align-center u-container-style u-custom-color-3 u-list-item u-radius-10 u-repeater-item u-shape-round u-video-cover u-list-item-3">
