--- a/server/src/templates/local_welcome/local_welcome.html
+++ b/server/src/templates/local_welcome/local_welcome.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta name="keywords" content="Dog Care Courses, ​Pet &amp;amp; Animal Care Courses, ​In-Home Grooming Guide, ​Pet care advice&amp;amp; expertise, ​Grooming Benefits, ​Behaviour, Welfare and Training, ​Get in tou​ch!, ​Frequently Asked Questions">
     <meta name="description" content="">
-    <title>Local Resident Welcome</title>
+    <title>Refugee Welcome</title>
     <link rel="stylesheet" href="/static/nicepage.css" media="screen">
-<link rel="stylesheet" href="/static/local_welcome.css" media="screen">
+<link rel="stylesheet" href="/static/refugee_welcome.css" media="screen">
     <script class="u-script" type="text/javascript" src="/static/jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="/static/nicepage.js" defer=""></script>
     <meta name="generator" content="Nicepage 4.21.12, nicepage.com">
@@ -21,7 +21,7 @@
 		"logo": "/static/images/WhatsAppImage2022-11-19at17.33.381.jpeg"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Local Resident Welcome">
+    <meta property="og:title" content="Refugee Welcome">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
@@ -63,24 +63,24 @@
         <p class="u-text u-text-default u-text-2" data-lang-en="Sample text. Click to select the text box. Click again or double click to start editing the text.">We are glad you are here. What would you like to do?</p>
         <div class="u-align-center-xs u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-list u-list-1">
           <div class="u-repeater u-repeater-1">
-            <div class="u-align-center u-container-align-center-xs u-container-style u-list-item u-radius-30 u-repeater-item u-shape-round u-white u-list-item-1">
-              <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-1"><span class="u-align-center-xs u-custom-color-1 u-file-icon u-icon u-icon-circle u-icon-1"><img src="/static/images/7452614-5f1ee5e9.png" alt=""></span>
-                <h4 class="u-align-center-xs u-text u-text-default u-text-3" data-lang-en="​Animal Behaviour"> Donate Item</h4>
+            <div class="u-align-center u-container-align-center-xs u-container-style u-list-item u-radius-30 u-repeater-item u-shape-round u-white u-list-item-1" data-href="/items" title="Find Items">
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1"><span class="u-align-center-xs u-custom-color-1 u-file-icon u-icon u-icon-circle u-icon-1"><img src="/static/images/7452614-5f1ee5e9.png" alt=""></span>
+                <h4 class="u-align-center-xs u-text u-text-default u-text-3" data-lang-en="​Animal Behaviour"> Find Items</h4>
               </div>
             </div>
             <div class="u-align-center u-container-align-center-xs u-container-style u-list-item u-radius-30 u-repeater-item u-shape-round u-white u-list-item-2">
-              <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-2"><span class="u-align-center-xs u-custom-color-1 u-file-icon u-icon u-icon-circle u-icon-2"><img src="/static/images/2097137-efdbaa86.png" alt=""></span>
-                <h4 class="u-align-center-xs u-text u-text-default u-text-4" data-lang-en="Health Care">Organize an Event</h4>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-2"><span class="u-align-center-xs u-custom-color-1 u-file-icon u-icon u-icon-circle u-icon-2"><img src="/static/images/2097137-efdbaa86.png" alt=""></span>
+                <h4 class="u-align-center-xs u-text u-text-default u-text-4" data-lang-en="Health Care">Find Events</h4>
               </div>
             </div>
             <div class="u-align-center u-container-align-center-xs u-container-style u-list-item u-radius-30 u-repeater-item u-shape-round u-white u-list-item-3">
-              <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-3"><span class="u-align-center-xs u-custom-color-1 u-file-icon u-icon u-icon-circle u-icon-3"><img src="/static/images/991922-e5e181df.png" alt=""></span>
-                <h4 class="u-align-center-xs u-text u-text-default u-text-5" data-lang-en="​Grooming">Create a course</h4>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-3"><span class="u-align-center-xs u-custom-color-1 u-file-icon u-icon u-icon-circle u-icon-3"><img src="/static/images/991922-e5e181df.png" alt=""></span>
+                <h4 class="u-align-center-xs u-text u-text-default u-text-5" data-lang-en="​Grooming">Register to a course</h4>
               </div>
             </div>
             <div class="u-align-center u-container-align-center-xs u-container-style u-list-item u-radius-30 u-repeater-item u-shape-round u-white u-list-item-4">
-              <div class="u-container-layout u-similar-container u-valign-middle u-container-layout-4"><span class="u-align-center-xs u-custom-color-1 u-file-icon u-icon u-icon-circle u-icon-4"><img src="/static/images/2704794-10d2eb06.png" alt=""></span>
-                <h4 class="u-align-center-xs u-text u-text-default u-text-6" data-lang-en="Dog Diet">Answer Questions</h4>
+              <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-4"><span class="u-align-center-xs u-custom-color-1 u-file-icon u-icon u-icon-circle u-icon-4"><img src="/static/images/2704794-10d2eb06.png" alt=""></span>
+                <h4 class="u-align-center-xs u-text u-text-default u-text-6" data-lang-en="Dog Diet">Forum</h4>
               </div>
             </div>
           </div>
@@ -88,5 +88,18 @@
       </div>
     </section>
     
+    
+    <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-7c13"><div class="u-clearfix u-sheet u-sheet-1"></div></footer>
+    <section class="u-backlink u-clearfix u-grey-80">
+      <a class="u-link" href="#" target="_blank">
+        <span>HTML Template</span>
+      </a>
+      <p class="u-text">
+        <span>created with</span>
+      </p>
+      <a class="u-link" href="#" target="_blank">
+        <span>WYSIWYG HTML Editor</span>
+      </a>. 
+    </section>
   
 </body></html>
