--- a/server/src/templates/auth/register.html
+++ b/server/src/templates/auth/register.html
@@ -89,7 +89,7 @@
             <label for="password" class="u-label">Password</label>
             <input type="password" name="password" id="password" class="u-border-1 u-border-grey-30 u-input u-input-rectangle u-white" required>
         
-            <input type="submit" value="Register">
+            <input type="submit" value="Register" class="u-btn u-btn-submit u-button-style">
           </form>
         </div>
       </div>
