--- a/server/src/templates/refugee_welcome/refugee_welcome.html
+++ b/server/src/templates/refugee_welcome/refugee_welcome.html
@@ -63,7 +63,7 @@
         <p class="u-text u-text-default u-text-2" data-lang-en="Sample text. Click to select the text box. Click again or double click to start editing the text.">We are glad you are here. What would you like to do?</p>
         <div class="u-align-center-xs u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-list u-list-1">
           <div class="u-repeater u-repeater-1">
-            <div class="u-align-center u-container-align-center-xs u-container-style u-list-item u-radius-30 u-repeater-item u-shape-round u-white u-list-item-1" data-href="Find-Items.html" title="Find Items">
+            <div class="u-align-center u-container-align-center-xs u-container-style u-list-item u-radius-30 u-repeater-item u-shape-round u-white u-list-item-1" data-href="/items" title="Find Items">
               <div class="u-container-layout u-similar-container u-valign-bottom u-container-layout-1"><span class="u-align-center-xs u-custom-color-1 u-file-icon u-icon u-icon-circle u-icon-1"><img src="/static/images/7452614-5f1ee5e9.png" alt=""></span>
                 <h4 class="u-align-center-xs u-text u-text-default u-text-3" data-lang-en="​Animal Behaviour"> Find Items</h4>
               </div>
